--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/js/leafletMap.js": "/js/leafletMap.js",
     "/js/stories.js": "/js/stories.js",
     "/js/shared-story.js": "/js/shared-story.js",
+    "/js/dashboard.js": "/js/dashboard.js",
     "/css/app.css": "/css/app.css",
     "/css/shared-story.css": "/css/shared-story.css",
     "/css/stories.css": "/css/stories.css"
